# cocoon-tpm

./: CODEOWNERS  Cargo.toml  README.md
.github/workflows/: rust.yml
bssl-bare-sys/: Cargo.toml  build.rs
bssl-bare-sys-target-integration/: Cargo.toml  build.rs
bssl-bare-sys/src/: lib.rs
cocoonfs/: cocoonfs-format.html
cocoonfs-cli/: Cargo.toml  README.md
cocoonfs-cli/src/: main.rs  std_file_nvblkdev.rs  std_file_nvchip.rs  std_sync_types.rs
crypto/: Cargo.toml
crypto/src/: error.rs  hash.rs  io_slices.rs  symcipher.rs
crypto/src/bssl_ffi/: bssl_bn.rs  error.rs  hash.rs  symcipher.rs
crypto/src/bssl_ffi/ecc/: bssl_ec_key.rs  curve.rs  ecdh.rs  ecdsa.rs
crypto/src/bssl_ffi/rng/: mod.rs
crypto/src/ecc/: ecschnorr.rs  gen_random_scalar.rs  key.rs
crypto/src/ecc/curve/: mod.rs
crypto/src/kdf/: mod.rs  tcg_tpm2_kdf_a.rs  tcg_tpm2_kdf_e.rs
crypto/src/pure_rust/: hash.rs
crypto/src/pure_rust/ecc/: ecdsa.rs
crypto/src/pure_rust/ecc/curve/: mod.rs  weierstrass_arithmetic.rs
crypto/src/pure_rust/symcipher/: ctr_impl.rs  mod.rs
crypto/src/rng/: hash_drbg.rs  mod.rs
storage/: Cargo.toml  README.md
storage/src/: lib.rs
storage/src/blkdev/: chunked_io_region.rs  helpers.rs  mod.rs  test.rs
storage/src/chip/: chunked_io_region.rs  mod.rs  test.rs
storage/src/fs/: mod.rs
storage/src/fs/cocoonfs/: auth_subject_ids.rs  auth_tree.rs  aux_fs_metadata.rs  checksum.rs  cocoonfs-format.md  crc32.rs  encryption_entities.rs  extent_ptr.rs  extents.rs  extents_layout.rs  fs.rs  image_header.rs  inode_extents_list.rs  inode_index.rs  integrity.rs  keys.rs  layout.rs  leb128.rs  mkfs.rs  mod.rs  openfs.rs  read_authenticate_extent.rs  read_buffer.rs  read_inode_data.rs  read_preauth.rs  set_assoc_cache.rs  write_blocks.rs  write_inode_data.rs
storage/src/fs/cocoonfs/alloc_bitmap/: bitmap.rs  bitmap_word.rs  file.rs  mod.rs  sparse_bitmap.rs
storage/src/fs/cocoonfs/journal/: apply_script.rs  auth_tree_updates.rs  extents_covering_auth_digests.rs  log.rs  mod.rs  replay.rs  staging_copy_disguise.rs
storage/src/fs/cocoonfs/test/: aux_fs_metadata.rs  inode_index.rs  journal_replay.rs  mkfs.rs  mod.rs  write_read.rs
storage/src/fs/cocoonfs/transaction/: apply_journal.rs  auth_tree_data_blocks_update_states.rs  auth_tree_updates.rs  cleanup.rs  journal_allocations.rs  mod.rs  prepare_staged_updates_application.rs  read_authenticate_data.rs  read_missing_data.rs  write_dirty_data.rs  write_journal.rs
tpm2-interface/: Cargo.toml
tpm2-interface/src/: interface.rs
utils-async/: Cargo.toml  README.md
utils-async/src/: lib.rs  test.rs
utils-async/src/alloc/: mod.rs  sync_vec.rs
utils-async/src/asynchronous/: broadcast_future.rs  broadcast_waker.rs  future_queue.rs  mod.rs  rwlock.rs  semaphore.rs
utils-async/src/sync_types/: generic_arc.rs  mod.rs
utils-async/tests/: sync_types.rs
utils-async/tests/sync_types/: deref_inner_by_tag.rs  generic_arc.rs  generic_sync_rc_ptr_ref.rs  lock_for_inner.rs  pinned_sync_rc_ptr.rs  sync_rc_ptr_for_inner.rs
utils-common/: Cargo.toml
utils-common/src/: ct_cmp.rs  fixed_vec.rs  index_permutation.rs  io_slices.rs  lib.rs  murmurhash3.rs  test_utils.rs  xor.rs  zeroize.rs
utils-common/tests/: index_permutation.rs  io_slices.rs
utils-common/tests/io_slices/: double_ended_io_slices_iter.rs  double_ended_io_slices_mut_iter.rs  io_slices_iter.rs  io_slices_mut_iter.rs  peekable_io_slices_iter.rs  walkable_io_slices_iter.rs
