[package]
name = "cocoon-tpm-bssl-bare-sys"
version = "0.1.0"
# Needs to have < 2024 for now, because boringssl's wrapper.h fed into
# bindgen has function arguments named 'gen', which is a reserved
# keyword.
edition = "2021"

license = "Apache-2.0"
description = "Cocoon TPM project - bare BoringSSL FFI bindings"
homepage = "https://github.com/coconut-svsm/cocoon-tpm"
repository = "https://github.com/coconut-svsm/cocoon-tpm"
readme = "README.md"

# Make usage if this crate exclusive with the official bssl-sys.
# Otherwise linking conflicts will occur.
links = "bssl"

[lib]

[features]
target-integration = ["dep:cocoon-tpm-bssl-bare-sys-target-integration"]

[dependencies]
cocoon-tpm-bssl-bare-sys-target-integration = { version = "0.1.0", optional = true }

[build-dependencies]
bindgen = "0.71.1"
cmake = "0.1.54"
