[package]
name = "cocoon-tpm-bssl-bare-sys"
version = "0.1.1"
# Needs to have < 2024 for now, because boringssl's wrapper.h fed into
# bindgen has function arguments named 'gen', which is a reserved
# keyword.
edition = "2021"

license = "Apache-2.0"
description = "Cocoon TPM project - bare BoringSSL FFI bindings"
homepage = "https://github.com/coconut-svsm/cocoon-tpm"
repository = "https://github.com/coconut-svsm/cocoon-tpm"
readme = "README.md"

# Make usage if this crate exclusive with the official bssl-sys.
# Otherwise linking conflicts will occur.
links = "bssl"

exclude = [
    "*.go",
    "*.png",
    "/third-party/boringssl/crypto_test_data.cc",
    "/third-party/boringssl/crypto/cipher/test",
    "/third-party/boringssl/crypto/fipsmodule/bn/test",
    "/third-party/boringssl/crypto/fipsmodule/policydocs",
    "/third-party/boringssl/crypto/hpke/test-vectors.json",
    "/third-party/boringssl/crypto/spx/*.txt",
    "/third-party/boringssl/crypto/x509/test",
    "/third-party/boringssl/fuzz",
    "/third-party/boringssl/pki/testdata",
    "/third-party/boringssl/rust/",
    "/third-party/boringssl/ssl/test/runner/hpke/testdata",
    "/third-party/boringssl/third_party/wycheproof_testvectors",
    "/third-party/boringssl/utils/fipstools",

    "/third-party/boringssl/crypto/blake2/blake2b256_tests.txt",
    "/third-party/boringssl/crypto/cipher/test/aes_128_cbc_sha1_tls_implicit_iv_tests.txt",
    "/third-party/boringssl/crypto/cipher/test/aes_128_cbc_sha1_tls_tests.txt",
    "/third-party/boringssl/crypto/cipher/test/aes_128_ccm_bluetooth_8_tests.txt",
    "/third-party/boringssl/crypto/cipher/test/aes_128_ccm_bluetooth_tests.txt",
    "/third-party/boringssl/crypto/cipher/test/aes_128_ccm_matter_tests.txt",
    "/third-party/boringssl/crypto/cipher/test/aes_128_gcm_randnonce_tests.txt",
    "/third-party/boringssl/crypto/cipher/test/aes_128_gcm_siv_tests.txt",
    "/third-party/boringssl/crypto/cipher/test/aes_128_gcm_tests.txt",
    "/third-party/boringssl/crypto/cipher/test/aes_192_gcm_tests.txt",
    "/third-party/boringssl/crypto/cipher/test/aes_256_cbc_sha1_tls_implicit_iv_tests.txt",
    "/third-party/boringssl/crypto/cipher/test/aes_256_cbc_sha1_tls_tests.txt",
    "/third-party/boringssl/crypto/cipher/test/aes_256_gcm_randnonce_tests.txt",
    "/third-party/boringssl/crypto/cipher/test/aes_256_gcm_siv_tests.txt",
    "/third-party/boringssl/crypto/cipher/test/aes_256_gcm_tests.txt",
    "/third-party/boringssl/crypto/cipher/test/chacha20_poly1305_tests.txt",
    "/third-party/boringssl/crypto/cipher/test/cipher_tests.txt",
    "/third-party/boringssl/crypto/cipher/test/des_ede3_cbc_sha1_tls_implicit_iv_tests.txt",
    "/third-party/boringssl/crypto/cipher/test/des_ede3_cbc_sha1_tls_tests.txt",
    "/third-party/boringssl/crypto/cipher/test/xchacha20_poly1305_tests.txt",
    "/third-party/boringssl/crypto/curve25519/ed25519_tests.txt",
    "/third-party/boringssl/crypto/ecdh/ecdh_tests.txt",
    "/third-party/boringssl/crypto/evp/evp_tests.txt",
    "/third-party/boringssl/crypto/evp/scrypt_tests.txt",
    "/third-party/boringssl/crypto/fipsmodule/aes/aes_tests.txt",
    "/third-party/boringssl/crypto/fipsmodule/bn/test/exp_tests.txt",
    "/third-party/boringssl/crypto/fipsmodule/bn/test/gcd_tests.txt",
    "/third-party/boringssl/crypto/fipsmodule/bn/test/miller_rabin_tests.txt",
    "/third-party/boringssl/crypto/fipsmodule/bn/test/mod_exp_tests.txt",
    "/third-party/boringssl/crypto/fipsmodule/bn/test/mod_inv_tests.txt",
    "/third-party/boringssl/crypto/fipsmodule/bn/test/mod_mul_tests.txt",
    "/third-party/boringssl/crypto/fipsmodule/bn/test/mod_sqrt_tests.txt",
    "/third-party/boringssl/crypto/fipsmodule/bn/test/product_tests.txt",
    "/third-party/boringssl/crypto/fipsmodule/bn/test/quotient_tests.txt",
    "/third-party/boringssl/crypto/fipsmodule/bn/test/shift_tests.txt",
    "/third-party/boringssl/crypto/fipsmodule/bn/test/sum_tests.txt",
    "/third-party/boringssl/crypto/fipsmodule/cmac/cavp_3des_cmac_tests.txt",
    "/third-party/boringssl/crypto/fipsmodule/cmac/cavp_aes128_cmac_tests.txt",
    "/third-party/boringssl/crypto/fipsmodule/cmac/cavp_aes192_cmac_tests.txt",
    "/third-party/boringssl/crypto/fipsmodule/cmac/cavp_aes256_cmac_tests.txt",
    "/third-party/boringssl/crypto/fipsmodule/ec/ec_scalar_base_mult_tests.txt",
    "/third-party/boringssl/crypto/fipsmodule/ec/p256-nistz_tests.txt",
    "/third-party/boringssl/crypto/fipsmodule/ecdsa/ecdsa_sign_tests.txt",
    "/third-party/boringssl/crypto/fipsmodule/ecdsa/ecdsa_verify_tests.txt",
    "/third-party/boringssl/crypto/fipsmodule/keccak/keccak_tests.txt",
    "/third-party/boringssl/crypto/hmac/hmac_tests.txt",
    "/third-party/boringssl/crypto/kyber/kyber_tests.txt",
    "/third-party/boringssl/crypto/mldsa/mldsa_nist_keygen_65_tests.txt",
    "/third-party/boringssl/crypto/mldsa/mldsa_nist_keygen_87_tests.txt",
    "/third-party/boringssl/crypto/mldsa/mldsa_nist_keygen_tests.txt",
    "/third-party/boringssl/crypto/mldsa/mldsa_nist_siggen_65_tests.txt",
    "/third-party/boringssl/crypto/mldsa/mldsa_nist_siggen_87_tests.txt",
    "/third-party/boringssl/crypto/mldsa/mldsa_nist_siggen_tests.txt",
    "/third-party/boringssl/crypto/mlkem/mlkem1024_decap_tests.txt",
    "/third-party/boringssl/crypto/mlkem/mlkem1024_encap_tests.txt",
    "/third-party/boringssl/crypto/mlkem/mlkem1024_keygen_tests.txt",
    "/third-party/boringssl/crypto/mlkem/mlkem1024_nist_decap_tests.txt",
    "/third-party/boringssl/crypto/mlkem/mlkem1024_nist_keygen_tests.txt",
    "/third-party/boringssl/crypto/mlkem/mlkem768_decap_tests.txt",
    "/third-party/boringssl/crypto/mlkem/mlkem768_encap_tests.txt",
    "/third-party/boringssl/crypto/mlkem/mlkem768_keygen_tests.txt",
    "/third-party/boringssl/crypto/mlkem/mlkem768_nist_decap_tests.txt",
    "/third-party/boringssl/crypto/mlkem/mlkem768_nist_keygen_tests.txt",
    "/third-party/boringssl/crypto/poly1305/poly1305_tests.txt",
    "/third-party/boringssl/crypto/siphash/siphash_tests.txt",
]

[lib]

[features]
target-integration = ["dep:cocoon-tpm-bssl-bare-sys-target-integration"]

[dependencies]
cocoon-tpm-bssl-bare-sys-target-integration = { version = "0.1.1", optional = true }

[build-dependencies]
bindgen = "0.71.1"
cmake = "0.1.54"
