[package]
name = "cocoon-tpm-storage"
version = "0.1.0"
edition = "2024"

[features]
zeroize = [
    "dep:zeroize", "cocoon-tpm-crypto/zeroize",  "cocoon-tpm-utils-common/zeroize",
]

[dependencies]
# CocoonFs needs CBC and also, ECB for the Journal disguise IV generation.
cocoon-tpm-crypto = { version = "0.1.0", default-features = false, features = ["cbc", "ecb"] }
cocoon-tpm-tpm2-interface = { version = "0.1.0" }
cocoon-tpm-utils-async = { version = "0.1.0" }
cocoon-tpm-utils-common = { version = "0.1.0" }

zeroize = { version = "1.8.1", optional = true, default-features = false, features= ["alloc"] }
