[package]
name = "cocoon-tpm-utils-async"
version = "0.1.1"
edition = "2024"

license = "Apache-2.0"
description = "Cocoon TPM project - Rust async related utilities"
homepage = "https://github.com/coconut-svsm/cocoon-tpm"
repository = "https://github.com/coconut-svsm/cocoon-tpm"
readme = "README.md"

[lib]
doctest = false

[dependencies]
cocoon-tpm-utils-common = { version = "0.1.1" }
