[package]
name = "cocoon-tpm-utils-common"
version = "0.1.2"
edition = "2024"

license = "Apache-2.0"
description = "Cocoon TPM project - common utilities"
homepage = "https://github.com/coconut-svsm/cocoon-tpm"
repository = "https://github.com/coconut-svsm/cocoon-tpm"
readme = "README.md"

[lib]
doctest = false

[features]
default = ["zeroize"]

zeroize = ["dep:zeroize", "cmpa/zeroize"]

[dependencies]
cmpa = { version = "0.1.0", default-features = false }
zeroize = { version = "1.8.1", optional = true, default-features = false, features= ["alloc"] }
